apps/media/jellystat-nas/deployment-jellystat-nas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellystat-nas
  name: jellystat-nas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellystat-nas
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellystat-nas
    spec:
      containers:
        - image: cyfershepard/jellystat:1.1.12
          name: jellystat-nas
          resources:
            requests:
              cpu: 300m
              memory: 150Mi
            limits: {}
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/backend/backup-data
              name: jellystat-nas-backup
      restartPolicy: Always
      volumes:
        - name: jellystat-nas-backup
          persistentVolumeClaim:
            claimName: jellystat-nas-backup
