apps/media/jellystat-nas/service-jellystat-nas.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellystat-nas
  name: jellystat-nas
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: jellystat-nas
