apps/media/jellystat-nas/ingress-jellystat-nas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat-nas
spec:
  ingressClassName: nginx
  rules:
  - host: jellystat-nas.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: jellystat-nas
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellystat-nas.almothana.xyz
      secretName: almothana-xyz-tls
